test(site): add llm chat tool call tests

--- a/sites/llm-chat/index.html
+++ b/sites/llm-chat/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div id="chat"></div>
+        <p>Tools: <code>codeSearch</code>, <code>semanticSearch</code></p>
         <form id="form">
             <input id="message" autocomplete="off" placeholder="Type your message..." />
             <button type="submit">Send</button>
